--- a/latex/appendix_dates_xtable.tex
+++ b/latex/appendix_dates_xtable.tex
@@ -1,19 +1,20 @@
-% latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Sat Aug 26 02:05:58 2023
+% latex table generated in R 4.4.1 by xtable 1.8-4 package
+% Wed Oct  9 17:14:20 2024
 \begin{longtable}{p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
 Island group (finest) & Date ranges & Island group (overnight-sailing) & Island group (shared language) & Time depth settlement group & Based on inference from neighbouring island? & Name in source & Source & Source (meta) \\ 
   \midrule
-Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands & Carson (2014) and Athens et al (2004) & \citet{rieth_cochrane_2018} \\ 
-  Saipan & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands & Carson (2014) and Athens et al (2004) & \citet{rieth_cochrane_2018} \\ 
+Guam & 3500, 2950 & Laguas yan gåni (Guam + Northern Marianas) & Laguas yan gåni (Guam + Northern Marianas) & 1 &  & Mariana Islands & Carson (2014) and Athens et al (2004) & \citet{rieth_cochrane_2018} \\ 
+  Saipan & 3500, 2950 & Laguas yan gåni (Guam + Northern Marianas) & Laguas yan gåni (Guam + Northern Marianas) & 1 &  & Mariana Islands & Carson (2014) and Athens et al (2004) & \citet{rieth_cochrane_2018} \\ 
+  Tinian & 3500, 2950 & Laguas yan gåni (Guam + Northern Marianas) & Laguas yan gåni (Guam + Northern Marianas) & 1 &  & Mariana Islands & Carson (2014) and Athens et al (2004) & \citet{rieth_cochrane_2018} \\ 
   Ambae & 3200, 3000 & Vanuatu + Temotu & Ambae & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Ambrym & 3200, 3000 & Vanuatu + Temotu & Ambrym & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Aneityum & 3200, 3000 & Vanuatu + Temotu & Aneityum & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Anuta & 2950 & Vanuatu + Temotu & Anuta & 2 &  & Anuta & \citet{carson2012recent} &  \\ 
   Aore & 3200, 3000 & Vanuatu + Temotu & Aore & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Araki & 3200, 3000 & Vanuatu + Temotu & Araki & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
-  Belep & 3050, 3000 & Kanaky & Belep & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
-  Bellona & 3100, 2900 & Bellona + Rennelle & Mo-ava-mo-iki & 2 &  & Bellona & \citet{carson2012recent} &  \\ 
+  Belep & 3050, 3000 & Kanaky (main island + Loyalties) & Belep & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Bellona & 3100, 2900 & Mo-ava-mo-iki (Bellona + Rennelle) & Mo-ava-mo-iki (Bellona + Rennelle) & 2 &  & Bellona & \citet{carson2012recent} &  \\ 
   Duff Islands & 3000 & Vanuatu + Temotu & Duff + Reef Islands & 2 &  & Taumako & Leach and Davidson (2008) & \citet{carson2012recent} \\ 
   Efate & 3200, 3000 & Vanuatu + Temotu & Efate & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Epi & 3200, 3000 & Vanuatu + Temotu & Epi & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
@@ -22,10 +23,10 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Gaua & 3200, 3000 & Vanuatu + Temotu & Gaua & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Hiu & 3200, 3000 & Vanuatu + Temotu & Hiu & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Kadavu & 3130, 2870 & Fiji & Kadavu & 2 &  & Fiji & Hope et al (2009), Denham et al (2012) and Nunn and Petchey (2013) & \citet{rieth_cochrane_2018} \\ 
-  Kanaky (New Caledonia main island) & 3050, 3000 & Kanaky & Kanaky (New Caledonia main island) & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Kanaky (New Caledonia main island) & 3050, 3000 & Kanaky (main island + Loyalties) & Kanaky (New Caledonia main island) & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
   Lau & 3130, 2870 & Fiji & Lau & 2 &  & Fiji & Hope et al (2009), Denham et al (2012) and Nunn and Petchey (2013) & \citet{rieth_cochrane_2018} \\ 
   Leveuka (Lomaviti) & 3130, 2870 & Fiji & Lomaviti & 2 &  & Fiji & Hope et al (2009), Denham et al (2012) and Nunn and Petchey (2013) & \citet{rieth_cochrane_2018} \\ 
-  Lifou & 3050, 3000 & Kanaky & Lifou & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Lifou & 3050, 3000 & Kanaky (main island + Loyalties) & Lifou & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
   Loh-Toga & 3200, 3000 & Vanuatu + Temotu & Loh-Toga & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Lomaviti & 3130, 2870 & Fiji & Lomaviti & 2 &  & Fiji & Hope et al (2009), Denham et al (2012) and Nunn and Petchey (2013) & \citet{rieth_cochrane_2018} \\ 
   Lomlom & 3185, 2639 & Vanuatu + Temotu & Duff + Reef Islands & 2 &  & Reef Islands and Santa Cruz Islands & Green (1991), Green et al (2008) and Sheppard et al (2015) & \citet{rieth_cochrane_2018} \\ 
@@ -38,14 +39,14 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Mota & 3200, 3000 & Vanuatu + Temotu & Mota & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Mota Lava & 3200, 3000 & Vanuatu + Temotu & Mota Lava & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Nendö & 3185, 2639 & Vanuatu + Temotu & Nendö & 2 &  & Reef Islands and Santa Cruz Islands & Green (1991), Green et al (2008) and Sheppard et al (2015) & \citet{rieth_cochrane_2018} \\ 
-  Nengone & 3050, 3000 & Kanaky & Nengone & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
-  Ouvea & 3050, 3000 & Kanaky & Ouvea & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
-  Ouvea (Iaai) & 3050, 3000 & Kanaky & Ouvea & 2 &  & Ouvea & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Nengone & 3050, 3000 & Kanaky (main island + Loyalties) & Nengone & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Ouvea & 3050, 3000 & Kanaky (main island + Loyalties) & Ouvea & 2 &  & New Caledonia & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
+  Ouvea (Iaai) & 3050, 3000 & Kanaky (main island + Loyalties) & Ouvea & 2 &  & Ouvea & Sand (2001) & \citet{rieth_cochrane_2018} \\ 
   Paama & 3200, 3000 & Vanuatu + Temotu & Paama & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Palau & 3100, 2900 & Palau & Palau & 2 &  & Palau & Athens and Ward (2001), Clark et al (2006) and Liston (2005, 2013) & \citet{rieth_cochrane_2018} \\ 
   Pentecost & 3200, 3000 & Vanuatu + Temotu & Pentecost & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Reef Islands & 3185, 2639 & Vanuatu + Temotu & Duff + Reef Islands & 2 &  & Reef Islands and Santa Cruz Islands & Green (1991), Green et al (2008) and Sheppard et al (2015) & \citet{rieth_cochrane_2018} \\ 
-  Rennelle & 3100, 2900 & Bellona + Rennelle & Mo-ava-mo-iki & 2 &  & Rennelle & \citet{carson2012recent} &  \\ 
+  Rennelle & 3100, 2900 & Mo-ava-mo-iki (Bellona + Rennelle) & Mo-ava-mo-iki (Bellona + Rennelle) & 2 &  & Rennelle & \citet{carson2012recent} &  \\ 
   Santo & 3200, 3000 & Vanuatu + Temotu & Santo & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Tamambo & 3200, 3000 & Vanuatu + Temotu & Tamambo & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
   Tangoa & 3200, 3000 & Vanuatu + Temotu & Santo & 2 &  & Vanuatu & Bedford et al (2006) & \citet{rieth_cochrane_2018} \\ 
@@ -99,6 +100,7 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Pingelap & 1700, 1550 & Pohnpei & Pingelap & 7 & Yes & Pohnpei & \citet{levin_seikel_miles_2019} &  \\ 
   Rotuma & 1300, 1050 & Rotuma & Rotuma & 8 &  & Rotuma & Ladefoged et al (1998) & \citet{rieth_cochrane_2018} \\ 
   Emae & 1000 & Vanuatu + Temotu & Emae & 9 & Yes & Emae & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
+  Futuna + Aniwa & 1000, 900 & Vanuatu + Temotu & Futuna + Aniwa & 9 &  & West Futuna & \citet{carson2012recent} &  \\ 
   Hawaii & 950, 850 & Hawaii & Hawaii & 9 &  & Hawaii & Athens et al (2014) & \citet{rieth_cochrane_2018} \\ 
   Hereheretue & 1100, 770 & Hereheretue & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Kapingamarangi & 1000, 700 & Kapingamarangi & Kapingamarangi & 9 &  & Kapingamarangi & \citet{carson2012recent} &  \\ 
@@ -109,6 +111,7 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Napuka & 1100, 770 & Napuka & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Ngā Pū Toru & 900, 680 & Ngā Pū Toru & Avaiki Nui (south) & 9 &  & Southern Cook Islands & Allen and Morrison (2013), Allen and Wallace (2007), Kirch et al (1995) and Parkes (1997) & \citet{rieth_cochrane_2018} \\ 
   Nia Matai & 960, 800 & Raro Matai + Nia Matai & Tahiti & 9 &  & Society Islands & Anderson and Sinoto (2002), Kahn (2012), Wilmshurst et al (2011) and Parkes (1997) & \citet{rieth_cochrane_2018} \\ 
+  Niu & 1070, 770 & Niu + Tuvalu & Tungaru + Tuvalu & 9 & Yes, Tuvalu specifically mentioned & Tuvalu & Dickinson et al (1990) & \citet{rieth_cochrane_2018} \\ 
   Nukutaveke & 1100, 770 & Nukutaveke 61, Nukutaveke 59 & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Puka-puka & 1100, 770 & Tuamotu + Puka-puka & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Rapa Iti & 850, 750 & Rapa Iti & Rapa Iti & 9 &  & Austral islands (Rapa) & Bollt (2008), Kennett et al (2012) and Prebble and Anderson (2012) & \citet{rieth_cochrane_2018} \\ 
@@ -116,8 +119,8 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Rarotonga & 900, 680 & Rarotonga & Avaiki Nui (south) & 9 &  & Southern Cook Islands & Allen and Morrison (2013), Allen and Wallace (2007), Kirch et al (1995) and Parkes (1997) & \citet{rieth_cochrane_2018} \\ 
   Reao & 1100, 770 & Tatakoto + Reao & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Tatakoto & 1100, 770 & Tatakoto + Reao & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
-  Te Fenua ’Enata & 950, 750 & Te Henua ‘Enana + Te Fenua ’Enata & Te Fenua ’Enata & 9 &  & Marquesas & Allen (2004) and Allen and McAllister (2010, 2013) & \citet{rieth_cochrane_2018} \\ 
-  Te Henua ‘Enana & 950, 750 & Te Henua ‘Enana + Te Fenua ’Enata & Te Henua ‘Enana & 9 &  & Marquesas & Allen (2004) and Allen and McAllister (2010, 2013) & \citet{rieth_cochrane_2018} \\ 
+  Te Fenua ’Enata (South Marquesas) & 950, 750 & Marquesas & Te Fenua ’Enata (South Marquesas) & 9 &  & Marquesas & Allen (2004) and Allen and McAllister (2010, 2013) & \citet{rieth_cochrane_2018} \\ 
+  Te Henua ‘Enana (North Marquesas) & 950, 750 & Marquesas & Te Henua ‘Enana (North Marquesas) & 9 &  & Marquesas & Allen (2004) and Allen and McAllister (2010, 2013) & \citet{rieth_cochrane_2018} \\ 
   Tuamotu & 1100, 770 & Tuamotu + Puka-puka & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Tureia & 1100, 770 & Tureia & Tuamotu & 9 &  & Tuamotu & Chazine (1985) and Hatanaka et al (1978) & \citet{rieth_cochrane_2018} \\ 
   Tuvalu & 1070, 770 & Tuvalu 31, Niu + Tuvalu, Tuvalu 32 & Tungaru + Tuvalu & 9 &  & Tuvalu & Dickinson et al (1990) & \citet{rieth_cochrane_2018} \\ 
@@ -137,13 +140,13 @@ Guam & 3500, 2950 & Laguas yan gåni & Laguas yan gåni & 1 &  & Mariana Islands
   Nukumanu & 500 & Luangiua + Nukumanu & Nukumanu & 11 & Yes & Nukumanu & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
   Nukuoro & 500 & Nukuoro & Nukuoro & 11 &  & Nukuoro & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
   Nukuria & 500 & Nukuria & Nukuria & 11 & Yes & Nukuria & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
-  Ouvea (West Uvean) & 500 & Kanaky & Ouvea & 11 & Yes & None & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
+  Ouvea (West Uvean) & 500 & Kanaky (main island + Loyalties) & Ouvea & 11 & Yes & None & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
   Rakahanga-Manihiki & 550, 300 & Rakahanga-Manihiki & Rakahanga-Manihiki & 11 &  & Northern Cook Islands & Chikamori (1998) and Chikamori and Yoshida (1988) & \citet{rieth_cochrane_2018} \\ 
   Rēkohou & 450, 400 & Rēkohou & Rēkohou & 11 &  & Aotearoa & McFadgen (1994) & \citet{rieth_cochrane_2018} \\ 
   Sikaiana & 500 & Sikaiana & Sikaiana & 11 & Yes & Sikaiana & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
   Takuu & 500 & Takuu & Takuu & 11 & Yes & Takuu & \citet{kirch2012basline} and \citet{carson2012recent} &  \\ 
   Tobi & 500, 400 & Tobi & Tobi & 11 &  & Tobi & \citet{intoh2007reconnaissance} &  \\ 
-  Northern Marianas & 185 & Laguas yan gåni & Laguas yan gåni & 12 &  & Mariana Islands (Carolinian settlement) & Fritz (1911), Spoehr (1954), Bowers (1953) and Quackenbush (1968) & \citet{ellis2012saipan} \\ 
+  Northern Marianas & 185 & Laguas yan gåni (Guam + Northern Marianas) & Laguas yan gåni (Guam + Northern Marianas) & 12 &  & Mariana Islands (Carolinian settlement) & Fritz (1911), Spoehr (1954), Bowers (1953) and Quackenbush (1968) & \citet{ellis2012saipan} \\ 
    \bottomrule
 \caption{Table of settlement time depth.} 
 \label{appendix_dates_xtable}
