--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,12 +1,11 @@
-% latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Sat Aug 26 02:05:58 2023
+% latex table generated in R 4.4.1 by xtable 1.8-4 package
+% Wed Oct  9 17:14:20 2024
 \begin{longtable}{p{4.5cm}p{2cm}p{2cm}p{4cm}p{4cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & References \\ 
   \midrule
 Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{buck1952}, \citet{kirch1984evolution}, \citet{van1995maori} \\ 
   Banaba & Tungaru + Tuvalu & 2 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
-  Bellona + Rennelle & Mo-ava-mo-iki & 2 & renn1242 & \citet{birketsmith1956}, \citet{monberg1991bellona} \\ 
   Chuuk & Chuuk & 2 & chuu1238 & \citet{goodenough1991}, \citet{goodenough2002under}, \citet{mahony1960taro} \\ 
   East Futuna & East Futuna & 2 & east2447 & \citet{kirch1994wet} \\ 
   Fiji & Kadavu & 3 & kada1285 & \citet{kuhlken2002intensive}, \citet{scarr1984fiji}, \citet{walter1978examination} \\ 
@@ -14,17 +13,19 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{buck1952}
   Fiji & Viti Levu + Yasawa & 3 & sout2864, nort2843 & \citet{kuhlken2002intensive}, \citet{scarr1984fiji}, \citet{walter1978examination} \\ 
   Hawaii & Hawaii & 4 & hawa1245 & \citet{kirch1994wet}, \citet{kirch2010chiefs} \\ 
   Hereheretue & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
-  Kanaky & Kanaky (New Caledonia main island) & 1 & ajie1238 & \citet{winslow1991} \\ 
-  Kanaky & Kanaky (New Caledonia main island) & 3 & xara1244 & \citet{young1991goodenough} \\ 
-  Kanaky & Lifou & 2 & dehu1237 & \citet{hadfield_1920}, \citet{ray1917people} \\ 
-  Kanaky & Nengone & 3 & neng1238 & \citet{dubois1984gens}, \citet{guiart1952organisation} \\ 
+  Kanaky (main island + Loyalties) & Kanaky (New Caledonia main island) & 1 & ajie1238 & \citet{winslow1991} \\ 
+  Kanaky (main island + Loyalties) & Kanaky (New Caledonia main island) & 3 & xara1244 & \citet{young1991goodenough} \\ 
+  Kanaky (main island + Loyalties) & Lifou & 2 & dehu1237 & \citet{hadfield_1920}, \citet{ray1917people} \\ 
+  Kanaky (main island + Loyalties) & Nengone & 3 & neng1238 & \citet{dubois1984gens}, \citet{guiart1952organisation} \\ 
   Kapingamarangi & Kapingamarangi & 1 & kapi1249 & \citet{buck1950} \\ 
   Kosrae & Kosrae & 3 & kosr1238 & \citet{athens2007prehistoric}, \citet{graves1986late}, \citet{peoples1991} \\ 
-  Laguas yan gåni & Laguas yan gåni & 1 & cham1312, caro1242 & \citet{cordy1983social}, \citet{thompson_1971}, \citet{josephandmurray1951}, \citet{spehr1954} \\ 
+  Laguas yan gåni (Guam + Northern Marianas) & Laguas yan gåni (Guam + Northern Marianas) & 1 & cham1312, caro1242 & \citet{cordy1983social}, \citet{thompson_1971}, \citet{josephandmurray1951}, \citet{spehr1954} \\ 
   Luangiua + Nukumanu & Luangiua & 1 & onto1237 & \citet{sahlins1958social}, \citet{bayliss1974constraints}, \citet{donner1991} \\ 
   Mangaia & Avaiki Nui (south) & 2 & raro1241 & \citet{bellwood1971varieties}, \citet{buck1934}, \citet{crocombe_1967}, \citet{hayes1981cook}, \citet{walter1996} \\ 
   Mangareva & Mangareva & 2 & mang1401 & \citet{buck1938}, \citet{conte2004archaeological}, \citet{green2000mangarevan} \\ 
+  Marquesas & Te Henua ‘Enana (North Marquesas) & 1 & nort2845 & \citet{sahlins1958social} \\ 
   Marutea & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
+  Mo-ava-mo-iki (Bellona + Rennelle) & Mo-ava-mo-iki (Bellona + Rennelle) & 2 & renn1242 & \citet{birketsmith1956}, \citet{monberg1991bellona} \\ 
   Morane & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
   Māngarongaro & Māngarongaro & 2 & penr1237 & \citet{buck1932b} \\ 
   Napuka & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
@@ -50,7 +51,6 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{buck1952}
   Sorol & Ulithi (greater) & 2 & ulit1238 & \citet{lessa1950}, \citet{lessa1966} \\ 
   Sāmoa & Sāmoa & 3 & samo1305 & \citet{sahlins1958social}, \citet{buck1930}, \citet{keesing1934}, \citet{watters_1958} \\ 
   Tatakoto + Reao & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
-  Te Henua ‘Enana + Te Fenua ’Enata & Te Henua ‘Enana & 1 & nort2845 & \citet{sahlins1958social} \\ 
   Tokelau & Tokelau & 2 & toke1240 & \citet{hooper1973demographic}, \citet{macgregor1937} \\ 
   Tonga & Tonga & 3 & tong1325 & \citet{kirch1984evolution}, \citet{cummins1977tongan}, \citet{ferdon1988early} \\ 
   Tuamotu + Puka-puka & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
