--- a/latex/appendix_medium_group_table.tex
+++ b/latex/appendix_medium_group_table.tex
@@ -1,73 +1,74 @@
-% latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Sat Aug 26 02:05:58 2023
+% latex table generated in R 4.4.1 by xtable 1.8-4 package
+% Wed Oct  9 17:14:20 2024
 \begin{longtable}{p{4.5cm}p{1.4cm}p{1.4cm}p{1.4cm}p{1.4cm}p{1.7cm}p{1.7cm}p{1.7cm}}
   \toprule
 Island group (shared language) & Lang count & Shoreline & environ PC1 & environ PC2 & environ PC3 & Political complexity (EA033) & Time depth \\ 
   \midrule
-Malakula & 33 & 1.010 & -0.612 & -0.836 & -0.662 & -1.110 & 0.864 \\ 
-  Kanaky (New Caledonia main island) & 29 & 2.275 & -1.420 & -0.254 & -1.210 & -1.110 & 0.864 \\ 
-  Santo & 24 & 1.038 & -0.340 & -0.853 & -0.347 & -1.110 & 0.864 \\ 
-  Ambrym & 6 & -0.706 & 0.372 & 1.623 & -2.086 & -1.110 & 0.864 \\ 
-  Efate & 5 & 0.559 & -0.675 & -0.429 & -1.082 & 0.182 & 0.864 \\ 
-  Pentecost & 5 & -0.173 & -0.218 & -0.356 & -0.601 & -1.110 & 0.864 \\ 
-  Tanna & 5 & -0.308 & -1.063 & -0.592 & -0.950 & -1.110 & 0.864 \\ 
-  Viti Levu + Yasawa & 4 & 1.238 & -0.597 & -0.572 & -0.337 & 1.474 & 0.864 \\ 
-  Erromango & 3 & -0.141 & -0.775 & -0.101 & -1.303 & 0.182 & 0.864 \\ 
-  Laguas yan gåni & 3 & 0.703 & -0.303 & -1.148 & -1.140 & -1.110 & 1.146 \\ 
-  Maewo & 3 & -0.194 & -0.123 & -0.383 & -0.448 & -1.110 & 0.864 \\ 
-  Vanua Lava & 3 & -0.272 & 0.160 & -0.438 & 0.068 & -1.110 & 0.864 \\ 
-  Ambae & 2 & -0.804 & 0.557 & 1.558 & -1.813 & -1.110 & 0.864 \\ 
-  Duff + Reef Islands & 2 & -0.636 & 0.906 & -0.532 & 1.537 & -1.110 & 0.864 \\ 
-  Tungaru + Tuvalu & 2 & 1.363 & 0.691 & -0.930 & -0.013 & 0.182 & 0.018 \\ 
-  Ureparapara & 2 & -0.774 & -0.050 & -1.023 & 0.392 & -1.110 & 0.864 \\ 
-  Aneityum & 1 & -0.500 & -0.970 & 0.121 & -1.272 & 0.182 & 0.864 \\ 
-  Anuta & 1 & -2.042 & 1.360 & 1.510 & -0.124 & -1.110 & 0.864 \\ 
-  Aore & 1 & -0.578 & -0.274 & -0.384 & -0.787 & -1.110 & 0.864 \\ 
-  Aotearoa & 1 & 3.025 & -2.534 & 2.598 & 2.541 & 0.182 & -1.393 \\ 
-  Avaiki Nui (south) & 1 & 0.210 & -0.708 & 0.082 & 0.110 & 0.182 & -1.111 \\ 
-  Chuuk & 1 & 0.800 & 0.831 & -1.221 & 1.477 & 0.182 & 0.300 \\ 
-  East Futuna & 1 & -0.408 & 0.272 & -0.306 & 0.597 & 0.182 & 0.300 \\ 
-  Hawaii & 1 & 1.331 & -0.745 & 0.375 & 0.746 & 2.766 & -1.111 \\ 
-  Hiu & 1 & -0.709 & 0.045 & -1.031 & 0.588 & -1.110 & 0.864 \\ 
-  Kadavu & 1 & 0.324 & -0.740 & -0.163 & -0.472 & 1.474 & 0.864 \\ 
-  Kapingamarangi & 1 & -1.305 & 1.535 & 1.011 & -0.955 & -1.110 & -1.111 \\ 
-  Kosrae & 1 & -0.269 & 1.040 & -1.206 & 1.262 & 1.474 & 0.018 \\ 
-  Lau & 1 & 1.435 & -0.633 & -0.523 & -0.057 & 1.474 & 0.864 \\ 
-  Lifou & 1 & -0.010 & -1.095 & 0.145 & -1.496 & 0.182 & 0.864 \\ 
-  Loh-Toga & 1 & -0.070 & 0.191 & -0.617 & 0.322 & -1.110 & 0.864 \\ 
-  Luangiua & 1 & -0.797 & 1.763 & 1.102 & -0.133 & -1.110 & -1.675 \\ 
-  Mangareva & 1 & 0.123 & -0.675 & 0.783 & 1.372 & 0.182 & -1.111 \\ 
-  Mo-ava-mo-iki & 1 & -0.106 & 0.237 & -1.095 & 0.876 & 0.182 & 0.864 \\ 
-  Mota & 1 & -1.077 & -0.045 & -1.002 & 0.451 & -1.110 & 0.864 \\ 
-  Mota Lava & 1 & -0.694 & 0.168 & -0.442 & 0.075 & -1.110 & 0.864 \\ 
-  Māngarongaro & 1 & -0.785 & 1.351 & 1.137 & -0.988 & 0.182 & -1.675 \\ 
-  Nengone & 1 & -0.165 & -1.172 & 0.290 & -1.364 & 1.474 & 0.864 \\ 
-  Niue & 1 & -0.523 & -0.771 & -0.410 & 0.075 & 0.182 & 0.018 \\ 
-  Nukuoro & 1 & -1.283 & 1.732 & 0.870 & -0.718 & -1.110 & -1.675 \\ 
-  Paama & 1 & -0.654 & -0.603 & -0.874 & -0.523 & -1.110 & 0.864 \\ 
-  Palau & 1 & 0.534 & 0.818 & -1.211 & 1.437 & 0.182 & 0.864 \\ 
-  Pohnpei & 1 & 0.509 & 0.932 & -1.175 & 1.414 & 1.474 & -0.264 \\ 
-  Pukapuka & 1 & -0.834 & 0.780 & -0.384 & 0.952 & 0.182 & -1.393 \\ 
-  Raivavae & 1 & -0.360 & -0.714 & 1.501 & 0.072 & 0.182 & -1.393 \\ 
-  Rakahanga-Manihiki & 1 & -0.952 & 1.396 & 1.320 & -0.483 & 0.182 & -1.675 \\ 
-  Rapa Nui & 1 & -0.498 & -1.583 & 0.218 & -0.397 & 0.182 & -1.393 \\ 
-  Ratak + Rālik & 1 & 1.259 & 0.604 & -1.046 & 0.334 & 1.474 & 0.018 \\ 
-  Rimatara & 1 & -1.082 & -0.787 & 0.588 & 0.125 & 0.182 & -1.393 \\ 
-  Rotuma & 1 & -0.779 & 0.848 & 0.316 & 0.722 & 1.474 & -0.829 \\ 
-  Rurutu & 1 & -0.416 & -0.946 & 0.479 & 0.429 & 0.182 & -1.393 \\ 
-  Rēkohou & 1 & 0.707 & -2.574 & 2.634 & 2.163 & 0.182 & -1.675 \\ 
-  Sāmoa & 1 & 1.179 & 0.150 & -0.788 & 0.972 & 1.474 & 0.582 \\ 
-  Tahiti & 1 & 1.346 & -0.179 & -0.409 & 0.555 & 1.474 & -1.111 \\ 
-  Te Henua ‘Enana & 1 & 0.823 & -0.201 & -1.951 & -2.525 & -1.110 & -1.111 \\ 
-  Tikopia & 1 & -1.595 & 1.233 & 1.512 & -0.402 & 0.182 & 0.864 \\ 
-  Tokelau & 1 & -0.508 & 1.755 & 1.333 & 0.378 & 0.182 & -1.393 \\ 
-  Tonga & 1 & 1.477 & -0.871 & -0.331 & -0.074 & 1.474 & 0.582 \\ 
-  Tuamotu & 1 & 2.367 & -0.210 & -0.450 & 0.723 & 0.182 & -1.111 \\ 
-  Tupuai & 1 & -0.674 & -0.897 & 0.828 & 0.398 & 0.182 & -1.393 \\ 
-  Ulithi (greater) & 1 & -0.003 & 0.710 & -0.636 & 0.973 & 0.182 & 0.018 \\ 
-  Uvea (Wallis) & 1 & -0.382 & 0.466 & -0.358 & 0.919 & 0.182 & 0.300 \\ 
-  Woleai & 1 & -0.828 & 1.691 & 1.176 & -0.123 & 0.182 & -0.264 \\ 
-  Yap & 1 & -0.741 & 1.507 & 1.351 & -0.168 & 1.474 & 0.300 \\ 
+Malakula & 33 & 1.024 & -0.599 & -0.754 & -0.779 & 1.000 & 11.000 \\ 
+  Kanaky (New Caledonia main island) & 29 & 2.286 & -1.428 & -0.138 & -1.168 & 1.000 & 11.000 \\ 
+  Santo & 24 & 1.053 & -0.324 & -0.809 & -0.485 & 1.000 & 11.000 \\ 
+  Ambrym & 6 & -0.687 & 0.333 & 1.839 & -1.600 & 1.000 & 11.000 \\ 
+  Efate & 5 & 0.575 & -0.673 & -0.303 & -1.089 & 2.000 & 11.000 \\ 
+  Pentecost & 5 & -0.155 & -0.213 & -0.292 & -0.618 & 1.000 & 11.000 \\ 
+  Tanna & 5 & -0.290 & -1.060 & -0.490 & -0.998 & 1.000 & 11.000 \\ 
+  Viti Levu + Yasawa & 4 & 1.252 & -0.588 & -0.549 & -0.413 & 3.000 & 11.000 \\ 
+  Erromango & 3 & -0.123 & -0.782 & 0.040 & -1.227 & 2.000 & 11.000 \\ 
+  Laguas yan gåni (Guam + Northern Marianas) & 3 & 0.737 & -0.278 & -0.957 & -1.345 & 1.000 & 12.000 \\ 
+  Maewo & 3 & -0.176 & -0.116 & -0.338 & -0.479 & 1.000 & 11.000 \\ 
+  Vanua Lava & 3 & -0.253 & 0.174 & -0.459 & -0.004 & 1.000 & 11.000 \\ 
+  Ambae & 2 & -0.785 & 0.521 & 1.741 & -1.355 & 1.000 & 11.000 \\ 
+  Duff + Reef Islands & 2 & -0.617 & 0.934 & -0.744 & 1.367 & 1.000 & 11.000 \\ 
+  Tungaru + Tuvalu & 2 & 1.377 & 0.741 & -0.877 & -0.168 & 2.000 & 8.000 \\ 
+  Ureparapara & 2 & -0.754 & -0.024 & -1.073 & 0.178 & 1.000 & 11.000 \\ 
+  Aneityum & 1 & -0.482 & -0.983 & 0.242 & -1.148 & 2.000 & 11.000 \\ 
+  Anuta & 1 & -2.019 & 1.339 & 1.468 & 0.232 & 1.000 & 11.000 \\ 
+  Aore & 1 & -0.559 & -0.269 & -0.293 & -0.801 & 1.000 & 11.000 \\ 
+  Aotearoa & 1 & 3.034 & -2.593 & 2.007 & 3.044 & 2.000 & 3.000 \\ 
+  Avaiki Nui (south) & 1 & 0.227 & -0.711 & 0.005 & 0.155 & 2.000 & 4.000 \\ 
+  Chuuk & 1 & 0.815 & 0.872 & -1.398 & 1.164 & 2.000 & 9.000 \\ 
+  East Futuna & 1 & -0.389 & 0.286 & -0.409 & 0.527 & 2.000 & 9.000 \\ 
+  Futuna + Aniwa & 1 & -1.134 & -0.198 & 2.210 & -1.953 & 2.000 & 4.000 \\ 
+  Hawaii & 1 & 1.345 & -0.750 & 0.185 & 0.828 & 4.000 & 4.000 \\ 
+  Hiu & 1 & -0.690 & 0.073 & -1.107 & 0.361 & 1.000 & 11.000 \\ 
+  Kadavu & 1 & 0.340 & -0.741 & -0.142 & -0.452 & 3.000 & 11.000 \\ 
+  Kapingamarangi & 1 & -1.284 & 1.523 & 1.110 & -0.660 & 1.000 & 4.000 \\ 
+  Kosrae & 1 & -0.251 & 1.081 & -1.345 & 0.963 & 3.000 & 8.000 \\ 
+  Lau & 1 & 1.449 & -0.624 & -0.546 & -0.137 & 3.000 & 11.000 \\ 
+  Lifou & 1 & 0.008 & -1.110 & 0.295 & -1.355 & 2.000 & 11.000 \\ 
+  Loh-Toga & 1 & -0.052 & 0.210 & -0.668 & 0.198 & 1.000 & 11.000 \\ 
+  Luangiua & 1 & -0.778 & 1.754 & 1.089 & 0.136 & 1.000 & 2.000 \\ 
+  Mangareva & 1 & 0.140 & -0.685 & 0.491 & 1.504 & 2.000 & 4.000 \\ 
+  Mo-ava-mo-iki (Bellona + Rennelle) & 1 & -0.088 & 0.269 & -1.205 & 0.620 & 2.000 & 11.000 \\ 
+  Mota & 1 & -1.057 & -0.019 & -1.061 & 0.238 & 1.000 & 11.000 \\ 
+  Mota Lava & 1 & -0.675 & 0.181 & -0.464 & 0.002 & 1.000 & 11.000 \\ 
+  Māngarongaro & 1 & -0.765 & 1.333 & 1.235 & -0.663 & 2.000 & 2.000 \\ 
+  Nengone & 1 & -0.148 & -1.190 & 0.411 & -1.197 & 3.000 & 11.000 \\ 
+  Niue & 1 & -0.504 & -0.764 & -0.461 & 0.015 & 2.000 & 8.000 \\ 
+  Nukuoro & 1 & -1.262 & 1.724 & 0.952 & -0.466 & 1.000 & 2.000 \\ 
+  Paama & 1 & -0.635 & -0.589 & -0.810 & -0.656 & 1.000 & 11.000 \\ 
+  Palau & 1 & 0.550 & 0.859 & -1.384 & 1.128 & 2.000 & 11.000 \\ 
+  Pohnpei & 1 & 0.525 & 0.973 & -1.341 & 1.114 & 3.000 & 7.000 \\ 
+  Pukapuka & 1 & -0.815 & 0.801 & -0.523 & 0.847 & 2.000 & 3.000 \\ 
+  Raivavae & 1 & -0.342 & -0.746 & 1.370 & 0.428 & 2.000 & 3.000 \\ 
+  Rakahanga-Manihiki & 1 & -0.932 & 1.377 & 1.337 & -0.145 & 2.000 & 2.000 \\ 
+  Rapa Nui & 1 & -0.479 & -1.600 & 0.186 & -0.278 & 2.000 & 3.000 \\ 
+  Ratak + Rālik & 1 & 1.273 & 0.634 & -1.069 & 0.120 & 3.000 & 8.000 \\ 
+  Rimatara & 1 & -1.062 & -0.800 & 0.486 & 0.280 & 2.000 & 3.000 \\ 
+  Rotuma & 1 & -0.760 & 0.854 & 0.185 & 0.778 & 3.000 & 5.000 \\ 
+  Rurutu & 1 & -0.398 & -0.957 & 0.332 & 0.545 & 2.000 & 3.000 \\ 
+  Rēkohou & 1 & 0.723 & -2.638 & 2.094 & 2.700 & 2.000 & 2.000 \\ 
+  Sāmoa & 1 & 1.193 & 0.176 & -0.929 & 0.780 & 3.000 & 10.000 \\ 
+  Tahiti & 1 & 1.360 & -0.166 & -0.516 & 0.469 & 3.000 & 4.000 \\ 
+  Te Henua ‘Enana (North Marquesas) & 1 & 0.838 & -0.174 & -1.535 & -2.778 & 1.000 & 4.000 \\ 
+  Tikopia & 1 & -1.573 & 1.211 & 1.507 & -0.030 & 2.000 & 11.000 \\ 
+  Tokelau & 1 & -0.489 & 1.744 & 1.235 & 0.671 & 2.000 & 3.000 \\ 
+  Tonga & 1 & 1.491 & -0.867 & -0.366 & -0.110 & 3.000 & 10.000 \\ 
+  Tuamotu & 1 & 2.378 & -0.195 & -0.581 & 0.620 & 2.000 & 4.000 \\ 
+  Tupuai & 1 & -0.654 & -0.915 & 0.672 & 0.591 & 2.000 & 3.000 \\ 
+  Ulithi (greater) & 1 & 0.014 & 0.736 & -0.769 & 0.813 & 2.000 & 8.000 \\ 
+  Uvea (Wallis) & 1 & -0.364 & 0.484 & -0.501 & 0.820 & 2.000 & 9.000 \\ 
+  Woleai & 1 & -0.808 & 1.680 & 1.157 & 0.163 & 2.000 & 7.000 \\ 
+  Yap & 1 & -0.722 & 1.491 & 1.324 & 0.159 & 3.000 & 9.000 \\ 
    \bottomrule
 \caption{Table of input values to model, shared language island groups.} 
 \label{appendix_medium_table}
