Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1284,7 +1284,7 @@ Plots of coefficient distributions of the BRMS models. Distributions, where the 
 
 \begin{figure}[ht]
 \includegraphics[width=0.85\textwidth]{brms_SBZR_control_phylo_group_full_effect_ridge_panels_plot.png}
-\caption{Island grouping: overnight sailing distances, control for phylogenetic non-independence.}
+\caption{Island grouping: overnight sailing distances, control for phylogenetic non-independence only.}
 \label{brms_SBZR_group_full_effect_ridge_panels_phylo}
 \end{figure}
 
@@ -1292,7 +1292,7 @@ Plots of coefficient distributions of the BRMS models. Distributions, where the 
 
 \begin{figure}[ht]
 \includegraphics[width=0.85\textwidth]{brms_SBZR_control_spatial_group_full_effect_ridge_panels_plot.png}
-\caption{Island grouping: overnight sailing distances, control for spatial non-independence.}
+\caption{Island grouping: overnight sailing distances, control for spatial non-independence only.}
 \label{brms_SBZR_control_spatial_group_full_effect_ridge_panels_plot}
 \end{figure}
 
@@ -1315,14 +1315,14 @@ Plots of coefficient distributions of the BRMS models. Distributions, where the 
 
 \begin{figure}[ht]
 \includegraphics[width=0.85\textwidth]{brms_medium_control_phylo_group_full_effect_ridge_panels_plot.png}
-\caption{Island grouping: shared language, control for phylogenetic non-independence.}
+\caption{Island grouping: shared language, control for phylogenetic non-independence only.}
 \label{brms_medium_group_full_effect_ridge_panels_phylo}
 \end{figure}
 
 
 \begin{figure}[ht]
 \includegraphics[width=0.85\textwidth]{brms_medium_control_spatial_group_full_effect_ridge_panels_plot.png}
-\caption{Island grouping: shared language, control for spatial non-independence. }
+\caption{Island grouping: shared language, control for spatial non-independence only. }
 \label{brms_medium_control_spatial_group_full_effect_ridge_panels_plot}
 \end{figure}
 
@@ -1474,7 +1474,7 @@ All the analysis for this research project was done in the free and open source 
 \newpage
 Table \ref{appendix_r_package_table} shows all packages used and their versions.
 
-\input{appendix_used_packages_table_versions.tex}
+\input{used_packages_table.tex}
 
 
 \newpage
