--- a/latex/BRMS_effects_SBZR_control_phylo.tex
+++ b/latex/BRMS_effects_SBZR_control_phylo.tex
@@ -1,21 +1,21 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 17:14:20 2024
+% Wed Oct  9 17:44:20 2024
 \begin{table}[ht]
 \centering
-\begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
+\begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
-term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Does 95\% interval straddle zero? & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS \\ 
   \midrule
-environ\_PC1 & 0.222 & 0.235 & -0.236 & 0.687 & yes & 72904.033 & 82836.415 \\ 
-  environ\_PC1:Shoreline & 0.049 & 0.175 & -0.283 & 0.403 & yes & 78980.839 & 85738.065 \\ 
-  environ\_PC2 & -0.188 & 0.216 & -0.610 & 0.239 & yes & 97677.284 & 89508.928 \\ 
-  Intercept & 0.561 & 0.637 & -0.673 & 1.854 & yes & 58344.380 & 73165.976 \\ 
-  moEA033 & -0.115 & 0.371 & -0.817 & 0.688 & yes & 57071.067 & 48826.576 \\ 
-  moEA033:Shoreline & -0.536 & 0.356 & -1.291 & 0.136 & yes & 38071.032 & 53777.162 \\ 
-  moTime depth & -0.012 & 0.095 & -0.214 & 0.163 & yes & 54101.326 & 65068.005 \\ 
-  moTime depth:Shoreline & 0.234 & 0.077 & 0.083 & 0.388 & no & 45201.277 & 66834.986 \\ 
-  Shoreline & 0.537 & 0.585 & -0.573 & 1.687 & yes & 48720.168 & 78096.383 \\ 
-  Shoreline:environ\_PC2 & -0.087 & 0.177 & -0.448 & 0.247 & yes & 76859.553 & 83224.182 \\ 
+environ\_PC1 & 0.222 & 0.235 & -0.236 & 0.687 & 72904.033 & 82836.415 \\ 
+  environ\_PC1:Shoreline & 0.049 & 0.175 & -0.283 & 0.403 & 78980.839 & 85738.065 \\ 
+  environ\_PC2 & -0.188 & 0.216 & -0.610 & 0.239 & 97677.284 & 89508.928 \\ 
+  Intercept & 0.561 & 0.637 & -0.673 & 1.854 & 58344.380 & 73165.976 \\ 
+  moEA033 & -0.115 & 0.371 & -0.817 & 0.688 & 57071.067 & 48826.576 \\ 
+  moEA033:Shoreline & -0.536 & 0.356 & -1.291 & 0.136 & 38071.032 & 53777.162 \\ 
+  moTime depth & -0.012 & 0.095 & -0.214 & 0.163 & 54101.326 & 65068.005 \\ 
+  moTime depth:Shoreline & 0.234 & 0.077 & 0.083 & 0.388 & 45201.277 & 66834.986 \\ 
+  Shoreline & 0.537 & 0.585 & -0.573 & 1.687 & 48720.168 & 78096.383 \\ 
+  Shoreline:environ\_PC2 & -0.087 & 0.177 & -0.448 & 0.247 & 76859.553 & 83224.182 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, overnight sailing island groups (all observations included) and control for phylogenetic non-independence only.} 
