Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1231,6 +1231,16 @@ Anonymised OSF project for double-blind peer review: \url{https://osf.io/amnh9/?
 %E. Decisions. If making decisions, report whether decisions change under different priors. For BFs, report changes in the minimum prior model probability needed to achieve decisive posterior model probability.
 
 \newpage
+\subsection{Model output}
+\input{latex/BRMS_effects_SBZR_control_none.tex}
+
+\input{latex/BRMS_effects_SBZR_control_phylo.tex}
+
+\input{latex/BRMS_effects_medium_control_none.tex}
+
+\input{latex/BRMS_effects_medium_control_spatialphylo.tex}
+
+
 
 \subsection{Model comparisons}
 \label{appendix_model_fit_scores}
