update appendix tables effects

--- a/latex/BRMS_effects_medium_control_none.tex
+++ b/latex/BRMS_effects_medium_control_none.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 17:58:15 2024
+% Wed Oct  9 18:42:41 2024
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
@@ -11,10 +11,10 @@ environ\_PC1 & -0.258 & 0.204 & -0.658 & 0.145 & 82345.826 & 87245.556 \\
   environ\_PC2 & 0.173 & 0.211 & -0.245 & 0.585 & 77986.839 & 84993.936 \\ 
   environ\_PC3 & 0.204 & 0.149 & -0.090 & 0.496 & 122235.417 & 89709.559 \\ 
   Intercept & 0.513 & 0.391 & -0.281 & 1.252 & 87269.595 & 76812.530 \\ 
-  moEA033 & -0.717 & 0.245 & -1.339 & -0.386 & 79071.774 & 53223.389 \\ 
-  moEA033:Shoreline & -0.441 & 0.203 & -0.923 & -0.114 & 96991.236 & 66133.718 \\ 
-  moTime depth & 0.124 & 0.040 & 0.051 & 0.207 & 90755.605 & 71799.482 \\ 
-  moTime depth:Shoreline & 0.096 & 0.046 & 0.011 & 0.191 & 89985.814 & 72139.012 \\ 
+  EA033 & -0.717 & 0.245 & -1.339 & -0.386 & 79071.774 & 53223.389 \\ 
+  EA033:Shoreline & -0.441 & 0.203 & -0.923 & -0.114 & 96991.236 & 66133.718 \\ 
+  Time depth & 0.124 & 0.040 & 0.051 & 0.207 & 90755.605 & 71799.482 \\ 
+  Time depth:Shoreline & 0.096 & 0.046 & 0.011 & 0.191 & 89985.814 & 72139.012 \\ 
   Shoreline & 0.375 & 0.450 & -0.516 & 1.255 & 74503.036 & 76942.416 \\ 
   Shoreline:environ\_PC2 & -0.334 & 0.203 & -0.713 & 0.084 & 80436.143 & 79164.961 \\ 
   Shoreline:environ\_PC3 & 0.215 & 0.130 & -0.051 & 0.459 & 119658.480 & 90030.766 \\ 
