--- a/latex/BRMS_effects_medium_control_spatialphylo.tex
+++ b/latex/BRMS_effects_medium_control_spatialphylo.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 17:58:15 2024
+% Wed Oct  9 18:42:41 2024
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
@@ -11,10 +11,10 @@ environ\_PC1 & -0.171 & 0.239 & -0.638 & 0.301 & 51714.039 & 74206.192 \\
   environ\_PC2 & 0.109 & 0.262 & -0.402 & 0.627 & 37659.501 & 60248.748 \\ 
   environ\_PC3 & 0.124 & 0.184 & -0.238 & 0.483 & 74544.721 & 81587.906 \\ 
   Intercept & 0.254 & 0.601 & -0.955 & 1.424 & 53615.519 & 63607.142 \\ 
-  moEA033 & -0.462 & 0.295 & -1.131 & 0.015 & 45209.542 & 46663.774 \\ 
-  moEA033:Shoreline & -0.355 & 0.238 & -0.869 & 0.074 & 49538.452 & 48558.559 \\ 
-  moTime depth & 0.081 & 0.063 & -0.046 & 0.203 & 46223.415 & 67089.028 \\ 
-  moTime depth:Shoreline & 0.090 & 0.051 & -0.005 & 0.196 & 60981.407 & 65014.462 \\ 
+  EA033 & -0.462 & 0.295 & -1.131 & 0.015 & 45209.542 & 46663.774 \\ 
+  EA033:Shoreline & -0.355 & 0.238 & -0.869 & 0.074 & 49538.452 & 48558.559 \\ 
+  Time depth & 0.081 & 0.063 & -0.046 & 0.203 & 46223.415 & 67089.028 \\ 
+  Time depth:Shoreline & 0.090 & 0.051 & -0.005 & 0.196 & 60981.407 & 65014.462 \\ 
   Shoreline & 0.297 & 0.473 & -0.632 & 1.233 & 47953.354 & 65322.136 \\ 
   Shoreline:environ\_PC2 & -0.270 & 0.249 & -0.744 & 0.239 & 38208.074 & 59160.807 \\ 
   Shoreline:environ\_PC3 & 0.046 & 0.168 & -0.301 & 0.362 & 60020.757 & 70386.365 \\ 
