--- a/latex/BRMS_effects_SBZR_control_none.tex
+++ b/latex/BRMS_effects_SBZR_control_none.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 17:58:15 2024
+% Wed Oct  9 18:42:41 2024
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
@@ -10,10 +10,10 @@ environ\_PC1 & 0.190 & 0.158 & -0.121 & 0.500 & 106121.494 & 86109.898 \\
   environ\_PC1:Shoreline & -0.123 & 0.135 & -0.384 & 0.145 & 93960.627 & 86404.025 \\ 
   environ\_PC2 & -0.219 & 0.186 & -0.581 & 0.149 & 66597.966 & 80010.333 \\ 
   Intercept & 0.145 & 0.415 & -0.672 & 0.977 & 51480.998 & 72452.110 \\ 
-  moEA033 & -0.153 & 0.369 & -0.788 & 0.674 & 46801.873 & 32645.051 \\ 
-  moEA033:Shoreline & -0.909 & 0.274 & -1.573 & -0.538 & 48503.945 & 36023.070 \\ 
-  moTime depth & -0.016 & 0.082 & -0.196 & 0.128 & 44704.926 & 56623.375 \\ 
-  moTime depth:Shoreline & 0.292 & 0.057 & 0.191 & 0.412 & 59087.738 & 64337.762 \\ 
+  EA033 & -0.153 & 0.369 & -0.788 & 0.674 & 46801.873 & 32645.051 \\ 
+  EA033:Shoreline & -0.909 & 0.274 & -1.573 & -0.538 & 48503.945 & 36023.070 \\ 
+  Time depth & -0.016 & 0.082 & -0.196 & 0.128 & 44704.926 & 56623.375 \\ 
+  Time depth:Shoreline & 0.292 & 0.057 & 0.191 & 0.412 & 59087.738 & 64337.762 \\ 
   Shoreline & 1.117 & 0.455 & 0.194 & 1.982 & 68855.306 & 70734.834 \\ 
   Shoreline:environ\_PC2 & -0.017 & 0.146 & -0.312 & 0.258 & 85662.431 & 82564.957 \\ 
    \bottomrule
