--- a/latex/BRMS_effects_SBZR_control_none.tex
+++ b/latex/BRMS_effects_SBZR_control_none.tex
@@ -1,21 +1,21 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 18:42:41 2024
+% Wed Oct  9 18:51:52 2024
 \begin{table}[ht]
 \centering
-\begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
+\begin{tabular}{p{3cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}}
   \toprule
-term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS & Rhat \\ 
   \midrule
-environ\_PC1 & 0.190 & 0.158 & -0.121 & 0.500 & 106121.494 & 86109.898 \\ 
-  environ\_PC1:Shoreline & -0.123 & 0.135 & -0.384 & 0.145 & 93960.627 & 86404.025 \\ 
-  environ\_PC2 & -0.219 & 0.186 & -0.581 & 0.149 & 66597.966 & 80010.333 \\ 
-  Intercept & 0.145 & 0.415 & -0.672 & 0.977 & 51480.998 & 72452.110 \\ 
-  EA033 & -0.153 & 0.369 & -0.788 & 0.674 & 46801.873 & 32645.051 \\ 
-  EA033:Shoreline & -0.909 & 0.274 & -1.573 & -0.538 & 48503.945 & 36023.070 \\ 
-  Time depth & -0.016 & 0.082 & -0.196 & 0.128 & 44704.926 & 56623.375 \\ 
-  Time depth:Shoreline & 0.292 & 0.057 & 0.191 & 0.412 & 59087.738 & 64337.762 \\ 
-  Shoreline & 1.117 & 0.455 & 0.194 & 1.982 & 68855.306 & 70734.834 \\ 
-  Shoreline:environ\_PC2 & -0.017 & 0.146 & -0.312 & 0.258 & 85662.431 & 82564.957 \\ 
+environ\_PC1 & 0.19 & 0.16 & -0.12 & 0.50 & 106121.49 & 86109.90 & 1.00 \\ 
+  environ\_PC1:Shoreline & -0.12 & 0.14 & -0.38 & 0.14 & 93960.63 & 86404.02 & 1.00 \\ 
+  environ\_PC2 & -0.22 & 0.19 & -0.58 & 0.15 & 66597.97 & 80010.33 & 1.00 \\ 
+  Intercept & 0.14 & 0.41 & -0.67 & 0.98 & 51481.00 & 72452.11 & 1.00 \\ 
+  EA033 & -0.15 & 0.37 & -0.79 & 0.67 & 46801.87 & 32645.05 & 1.00 \\ 
+  EA033:Shoreline & -0.91 & 0.27 & -1.57 & -0.54 & 48503.94 & 36023.07 & 1.00 \\ 
+  Time depth & -0.02 & 0.08 & -0.20 & 0.13 & 44704.93 & 56623.38 & 1.00 \\ 
+  Time depth:Shoreline & 0.29 & 0.06 & 0.19 & 0.41 & 59087.74 & 64337.76 & 1.00 \\ 
+  Shoreline & 1.12 & 0.46 & 0.19 & 1.98 & 68855.31 & 70734.83 & 1.00 \\ 
+  Shoreline:environ\_PC2 & -0.02 & 0.15 & -0.31 & 0.26 & 85662.43 & 82564.96 & 1.00 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, overnight sailing island groups (all observations included) and no control for spatial or phylogenetic non-independence.} 
