--- a/latex/BRMS_effects_SBZR_control_phylo.tex
+++ b/latex/BRMS_effects_SBZR_control_phylo.tex
@@ -1,21 +1,21 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 18:42:41 2024
+% Wed Oct  9 18:51:52 2024
 \begin{table}[ht]
 \centering
-\begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
+\begin{tabular}{p{3cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}}
   \toprule
-term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS & Rhat \\ 
   \midrule
-environ\_PC1 & 0.222 & 0.235 & -0.236 & 0.687 & 72904.033 & 82836.415 \\ 
-  environ\_PC1:Shoreline & 0.049 & 0.175 & -0.283 & 0.403 & 78980.839 & 85738.065 \\ 
-  environ\_PC2 & -0.188 & 0.216 & -0.610 & 0.239 & 97677.284 & 89508.928 \\ 
-  Intercept & 0.561 & 0.637 & -0.673 & 1.854 & 58344.380 & 73165.976 \\ 
-  EA033 & -0.115 & 0.371 & -0.817 & 0.688 & 57071.067 & 48826.576 \\ 
-  EA033:Shoreline & -0.536 & 0.356 & -1.291 & 0.136 & 38071.032 & 53777.162 \\ 
-  Time depth & -0.012 & 0.095 & -0.214 & 0.163 & 54101.326 & 65068.005 \\ 
-  Time depth:Shoreline & 0.234 & 0.077 & 0.083 & 0.388 & 45201.277 & 66834.986 \\ 
-  Shoreline & 0.537 & 0.585 & -0.573 & 1.687 & 48720.168 & 78096.383 \\ 
-  Shoreline:environ\_PC2 & -0.087 & 0.177 & -0.448 & 0.247 & 76859.553 & 83224.182 \\ 
+environ\_PC1 & 0.22 & 0.23 & -0.24 & 0.69 & 72904.03 & 82836.41 & 1.00 \\ 
+  environ\_PC1:Shoreline & 0.05 & 0.17 & -0.28 & 0.40 & 78980.84 & 85738.07 & 1.00 \\ 
+  environ\_PC2 & -0.19 & 0.22 & -0.61 & 0.24 & 97677.28 & 89508.93 & 1.00 \\ 
+  Intercept & 0.56 & 0.64 & -0.67 & 1.85 & 58344.38 & 73165.98 & 1.00 \\ 
+  EA033 & -0.12 & 0.37 & -0.82 & 0.69 & 57071.07 & 48826.58 & 1.00 \\ 
+  EA033:Shoreline & -0.54 & 0.36 & -1.29 & 0.14 & 38071.03 & 53777.16 & 1.00 \\ 
+  Time depth & -0.01 & 0.10 & -0.21 & 0.16 & 54101.33 & 65068.00 & 1.00 \\ 
+  Time depth:Shoreline & 0.23 & 0.08 & 0.08 & 0.39 & 45201.28 & 66834.99 & 1.00 \\ 
+  Shoreline & 0.54 & 0.58 & -0.57 & 1.69 & 48720.17 & 78096.38 & 1.00 \\ 
+  Shoreline:environ\_PC2 & -0.09 & 0.18 & -0.45 & 0.25 & 76859.55 & 83224.18 & 1.00 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, overnight sailing island groups (all observations included) and control for phylogenetic non-independence only.} 
