--- a/latex/BRMS_effects_medium_control_spatialphylo.tex
+++ b/latex/BRMS_effects_medium_control_spatialphylo.tex
@@ -1,23 +1,23 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 18:42:41 2024
+% Wed Oct  9 18:51:52 2024
 \begin{table}[ht]
 \centering
-\begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
+\begin{tabular}{p{3cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}}
   \toprule
-term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS & Rhat \\ 
   \midrule
-environ\_PC1 & -0.171 & 0.239 & -0.638 & 0.301 & 51714.039 & 74206.192 \\ 
-  environ\_PC1:Shoreline & 0.001 & 0.202 & -0.390 & 0.402 & 42311.041 & 65668.099 \\ 
-  environ\_PC2 & 0.109 & 0.262 & -0.402 & 0.627 & 37659.501 & 60248.748 \\ 
-  environ\_PC3 & 0.124 & 0.184 & -0.238 & 0.483 & 74544.721 & 81587.906 \\ 
-  Intercept & 0.254 & 0.601 & -0.955 & 1.424 & 53615.519 & 63607.142 \\ 
-  EA033 & -0.462 & 0.295 & -1.131 & 0.015 & 45209.542 & 46663.774 \\ 
-  EA033:Shoreline & -0.355 & 0.238 & -0.869 & 0.074 & 49538.452 & 48558.559 \\ 
-  Time depth & 0.081 & 0.063 & -0.046 & 0.203 & 46223.415 & 67089.028 \\ 
-  Time depth:Shoreline & 0.090 & 0.051 & -0.005 & 0.196 & 60981.407 & 65014.462 \\ 
-  Shoreline & 0.297 & 0.473 & -0.632 & 1.233 & 47953.354 & 65322.136 \\ 
-  Shoreline:environ\_PC2 & -0.270 & 0.249 & -0.744 & 0.239 & 38208.074 & 59160.807 \\ 
-  Shoreline:environ\_PC3 & 0.046 & 0.168 & -0.301 & 0.362 & 60020.757 & 70386.365 \\ 
+environ\_PC1 & -0.17 & 0.24 & -0.64 & 0.30 & 51714.04 & 74206.19 & 1.00 \\ 
+  environ\_PC1:Shoreline & 0.00 & 0.20 & -0.39 & 0.40 & 42311.04 & 65668.10 & 1.00 \\ 
+  environ\_PC2 & 0.11 & 0.26 & -0.40 & 0.63 & 37659.50 & 60248.75 & 1.00 \\ 
+  environ\_PC3 & 0.12 & 0.18 & -0.24 & 0.48 & 74544.72 & 81587.91 & 1.00 \\ 
+  Intercept & 0.25 & 0.60 & -0.95 & 1.42 & 53615.52 & 63607.14 & 1.00 \\ 
+  EA033 & -0.46 & 0.29 & -1.13 & 0.01 & 45209.54 & 46663.77 & 1.00 \\ 
+  EA033:Shoreline & -0.35 & 0.24 & -0.87 & 0.07 & 49538.45 & 48558.56 & 1.00 \\ 
+  Time depth & 0.08 & 0.06 & -0.05 & 0.20 & 46223.42 & 67089.03 & 1.00 \\ 
+  Time depth:Shoreline & 0.09 & 0.05 & -0.01 & 0.20 & 60981.41 & 65014.46 & 1.00 \\ 
+  Shoreline & 0.30 & 0.47 & -0.63 & 1.23 & 47953.35 & 65322.14 & 1.00 \\ 
+  Shoreline:environ\_PC2 & -0.27 & 0.25 & -0.74 & 0.24 & 38208.07 & 59160.81 & 1.00 \\ 
+  Shoreline:environ\_PC3 & 0.05 & 0.17 & -0.30 & 0.36 & 60020.76 & 70386.37 & 1.00 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, shared-language island groups (all observations included) and control for spatial and phylogenetic non-independence.} 
