--- a/latex/BRMS_effects_medium_control_none.tex
+++ b/latex/BRMS_effects_medium_control_none.tex
@@ -1,23 +1,23 @@
 % latex table generated in R 4.4.1 by xtable 1.8-4 package
-% Wed Oct  9 18:42:41 2024
+% Wed Oct  9 18:50:41 2024
 \begin{table}[ht]
 \centering
-\begin{tabular}{p{4cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}p{1.65cm}}
+\begin{tabular}{p{3cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}p{1.35cm}}
   \toprule
-term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Bulk ESS & Tail ESS & Rhat \\ 
   \midrule
-environ\_PC1 & -0.258 & 0.204 & -0.658 & 0.145 & 82345.826 & 87245.556 \\ 
-  environ\_PC1:Shoreline & 0.208 & 0.157 & -0.089 & 0.528 & 77542.766 & 85506.968 \\ 
-  environ\_PC2 & 0.173 & 0.211 & -0.245 & 0.585 & 77986.839 & 84993.936 \\ 
-  environ\_PC3 & 0.204 & 0.149 & -0.090 & 0.496 & 122235.417 & 89709.559 \\ 
-  Intercept & 0.513 & 0.391 & -0.281 & 1.252 & 87269.595 & 76812.530 \\ 
-  EA033 & -0.717 & 0.245 & -1.339 & -0.386 & 79071.774 & 53223.389 \\ 
-  EA033:Shoreline & -0.441 & 0.203 & -0.923 & -0.114 & 96991.236 & 66133.718 \\ 
-  Time depth & 0.124 & 0.040 & 0.051 & 0.207 & 90755.605 & 71799.482 \\ 
-  Time depth:Shoreline & 0.096 & 0.046 & 0.011 & 0.191 & 89985.814 & 72139.012 \\ 
-  Shoreline & 0.375 & 0.450 & -0.516 & 1.255 & 74503.036 & 76942.416 \\ 
-  Shoreline:environ\_PC2 & -0.334 & 0.203 & -0.713 & 0.084 & 80436.143 & 79164.961 \\ 
-  Shoreline:environ\_PC3 & 0.215 & 0.130 & -0.051 & 0.459 & 119658.480 & 90030.766 \\ 
+environ\_PC1 & -0.26 & 0.20 & -0.66 & 0.14 & 82345.83 & 87245.56 & 1.00 \\ 
+  environ\_PC1:Shoreline & 0.21 & 0.16 & -0.09 & 0.53 & 77542.77 & 85506.97 & 1.00 \\ 
+  environ\_PC2 & 0.17 & 0.21 & -0.24 & 0.58 & 77986.84 & 84993.94 & 1.00 \\ 
+  environ\_PC3 & 0.20 & 0.15 & -0.09 & 0.50 & 122235.42 & 89709.56 & 1.00 \\ 
+  Intercept & 0.51 & 0.39 & -0.28 & 1.25 & 87269.60 & 76812.53 & 1.00 \\ 
+  EA033 & -0.72 & 0.24 & -1.34 & -0.39 & 79071.77 & 53223.39 & 1.00 \\ 
+  EA033:Shoreline & -0.44 & 0.20 & -0.92 & -0.11 & 96991.24 & 66133.72 & 1.00 \\ 
+  Time depth & 0.12 & 0.04 & 0.05 & 0.21 & 90755.60 & 71799.48 & 1.00 \\ 
+  Time depth:Shoreline & 0.10 & 0.05 & 0.01 & 0.19 & 89985.81 & 72139.01 & 1.00 \\ 
+  Shoreline & 0.38 & 0.45 & -0.52 & 1.25 & 74503.04 & 76942.42 & 1.00 \\ 
+  Shoreline:environ\_PC2 & -0.33 & 0.20 & -0.71 & 0.08 & 80436.14 & 79164.96 & 1.00 \\ 
+  Shoreline:environ\_PC3 & 0.21 & 0.13 & -0.05 & 0.46 & 119658.48 & 90030.77 & 1.00 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, shared-language island groups (all observations included) and no control for spatial or phylogenetic non-independence.} 
